// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`Thumbnails renders correctly with a list of more 1`] = `
<div>
  <h1>
    type
    : 
    title
     (
    2
    )
  </h1>
  <ul
    css="[object Object]"
  >
    <li>
      <a
        aria-label="link-to-picture"
        href="/picture/uid-1"
      >
        <picture>
          <img
            alt="title1"
            css="[object Object]"
            height="174"
            image="[object Object]"
            width="261"
          />
        </picture>
      </a>
    </li>
    <li>
      <a
        aria-label="link-to-picture"
        href="/picture/uid-2"
      >
        <picture>
          <img
            alt="title2"
            css="[object Object]"
            height="174"
            image="[object Object]"
            width="261"
          />
        </picture>
      </a>
    </li>
  </ul>
</div>
`;

exports[`Thumbnails renders correctly with a list of one 1`] = `
<div>
  <h1>
    type
    : 
    title
     (
    1
    )
  </h1>
  <ul
    css="[object Object]"
  >
    <li>
      <a
        aria-label="link-to-picture"
        href="/picture/uid-bar"
      >
        <picture>
          <img
            alt="title1"
            css="[object Object]"
            height="174"
            image="[object Object]"
            width="261"
          />
        </picture>
      </a>
    </li>
  </ul>
</div>
`;

exports[`Thumbnails renders correctly with a list of zero 1`] = `
<div>
  <h1>
    type
    : 
    title
     (
    0
    )
  </h1>
  <ul
    css="[object Object]"
  />
</div>
`;
